--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-home-component></app-home-component>
-<div class="menu-container">
-    <app-menu></app-menu>
-  </div>
+
+
+  <app-menu></app-menu>
+  <router-outlet></router-outlet>
+
+ 
  
