--- a/src/app/Magazzino/magazzini/magazzini.component.html
+++ b/src/app/Magazzino/magazzini/magazzini.component.html
@@ -15,7 +15,8 @@
           <td>{{ magazzino.indirizzo }}</td>
           <td>{{ magazzino.sede }}</td>
           <td>{{ magazzino.capacitaMassima }}</td>
-          <!-- Altre colonne, se necessario -->
+          
+          <!-- Altre colonne, se necessario aa-->
         </tr>
       </tbody>
     </table>
