--- a/src/app/Magazzino/aggiungi-magazzino/aggiungi-magazzino.component.html
+++ b/src/app/Magazzino/aggiungi-magazzino/aggiungi-magazzino.component.html
@@ -1,1 +1,27 @@
-<p>aggiungi-magazzino works!</p>
+<div>
+    <h2>Aggiungi Magazzino</h2>
+    <form (submit)="aggiungiMagazzino()">
+      <div class="form-group">
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" [(ngModel)]="magazzino.nome" required>
+      </div>
+  
+      <div class="form-group">
+        <label for="indirizzo">Indirizzo:</label>
+        <input type="text" id="indirizzo" name="indirizzo" [(ngModel)]="magazzino.indirizzo" required>
+      </div>
+  
+      <div class="form-group">
+        <label for="sede">Sede:</label>
+        <input type="text" id="sede" name="sede" [(ngModel)]="magazzino.sede" required>
+      </div>
+  
+      <div class="form-group">
+        <label for="capacitaMassima">Capacità Massima:</label>
+        <input type="number" id="capacitaMassima" name="capacitaMassima" [(ngModel)]="magazzino.capacitaMassima" required>
+      </div>
+  
+      <button type="submit">Aggiungi Magazzino</button>
+    </form>
+  </div>
+  
