--- a/src/app/Magazzino/aggiungi-magazzino/aggiungi-magazzino.component.css
+++ b/src/app/Magazzino/aggiungi-magazzino/aggiungi-magazzino.component.css
@@ -1,54 +1,66 @@
-/* aggiungi-magazzino.component.css */
-
-/* Stile per il contenitore principale */
+/* Aggiungi stili al contenitore principale */
 .container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-  }
-  
-  /* Stile per il titolo */
-  h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
-    color: #333;
-  }
-  
-  /* Stile per i campi del modulo */
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  /* Stile per le etichette dei campi */
-  label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: #555;
-  }
-  
-  /* Stile per gli input dei campi */
-  input[type="text"],
-  input[type="number"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    font-size: 16px;
-  }
-  
-  /* Stile per il pulsante di invio */
-  button[type="submit"] {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 3px;
-    font-size: 
-  }  
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+
+/* Stile per il titolo */
+h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+/* Stile per i campi del modulo */
+.form-group {
+  margin-bottom: 15px;
+}
+
+/* Stile per le etichette dei campi */
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #555;
+}
+
+/* Stile per gli input dei campi */
+input[type="text"],
+input[type="number"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  font-size: 16px;
+}
+
+/* Stile per il pulsante di invio */
+button[type="submit"] {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  font-size: 16px; /* Aggiunto un valore valido per la dimensione del carattere */
+}
+
+/* Stile per il messaggio di successo */
+.success-message {
+  color: green;
+  font-weight: bold;
+  margin-top: 10px; /* Aggiunto margine superiore per separare dal modulo */
+}
+
+/* Stile per il messaggio di errore */
+.error-message {
+  color: red;
+  font-weight: bold;
+  margin-top: 10px; /* Aggiunto margine superiore per separare dal modulo */
+}
