--- a/src/app/Fornitore/aggiungi-fornitore/aggiungi-fornitore.component.html
+++ b/src/app/Fornitore/aggiungi-fornitore/aggiungi-fornitore.component.html
@@ -1,1 +1,36 @@
-<p>aggiungi-fornitore works!</p>
+<div>
+    <h2>Aggiungi Fornitore</h2>
+    <form (submit)="aggiungiFornitore()">
+      <div class="form-group">
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" [(ngModel)]="fornitore.nome" required>
+      </div>
+  
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" [(ngModel)]="fornitore.email" required>
+      </div>
+  
+      <div class="form-group">
+        <label for="sedeLegale">Sede Legale:</label>
+        <input type="text" id="sedeLegale" name="sedeLegale" [(ngModel)]="fornitore.sedeLegale" required>
+      </div>
+
+      <div class="form-group">
+        <label for="numeroTelefono">Numero di Telefono:</label>
+        <input type="text" id="numeroTelefono" name="numeroTelefono" [(ngModel)]="fornitore.numeroTelefono" required>
+      </div>
+  
+      <div class="form-group">
+        <label for="nazioneSede">Nazione della Sede:</label>
+        <input type="text" id="nazioneSede" name="nazioneSede" [(ngModel)]="fornitore.nazioneSede" required>
+      </div>
+  
+      <div class="form-group">
+        <label for="partitaIVA">Partita IVA:</label>
+        <input type="text" id="partitaIVA" name="partitaIVA" [(ngModel)]="fornitore.partitaIVA" required>
+      </div>
+  
+      <button (click)="aggiungiFornitore()">Aggiungi Fornitore</button>
+    </form>
+</div>
