--- a/src/app/home/menu/menu.component.html
+++ b/src/app/home/menu/menu.component.html
@@ -4,7 +4,13 @@
       <img src="https://th.bing.com/th/id/OIP.iItjx2XLoFx1Rwgt0ug0yQHaFw?pid=ImgDet&rs=1" 
            height="60" 
            class="menu-logo" 
-           (click)="navigateToHome()" /> <!-- Aggiungi l'evento di clic qui -->
+           (click)="navigateToHome()" /> <!-- Prima immagine con evento di clic -->
+      
+      <!-- Seconda immagine con evento di clic -->
+      <img src="https://www.mediakey.tv/fileadmin/user_upload/antoniobarbati.png" 
+           height="60" 
+           class="menu-logo" 
+           (click)="navigateToHome()" /> 
     </ng-template>
     <ng-template pTemplate="end">
       <input type="text" pInputText placeholder="Search" class="w-full" />
