--- a/src/app/home/menu/menu.component.css
+++ b/src/app/home/menu/menu.component.css
@@ -1,26 +1,21 @@
 /* Importa il file di stile di primeicons */
 @import '~primeicons/primeicons.css';
 
-/* Stile per la barra del menu personalizzato */
-.custom-menubar {
-  background-color: #6e0808;
-  color: #3f0a0a;
-  font-size: 125%;
+::ng-deep .p-menu-list .p-menuitem {
+  margin: 0 !important;
+  padding: 5px 0 10px 0 !important; /* Padding superiore e inferiore per separare gli elementi */
+  border-bottom: 1px solid #000000 !important; /* Linea divisoria tra gli elementi */
+   /* Dimensione del testo (aumentata a 24px) */
 }
 
-/* Stile per le immagini */
-img {
-  border-radius: 85%;
-  height: 18vh;
-  width: auto;
-  margin-top: 5%;
+/* Stile del menu secondario */
+::ng-deep .p-submenu-list .p-menuitem {
+  margin: 0 !important;
+  padding: 5px 0 !important; /* Padding superiore e inferiore per separare gli elementi */
+    /* Dimensione del testo (aumentata a 22px) */
 }
 
-/* Stile per il contenitore della card */
-.card {
-  background-color: rgb(255, 255, 255);
+/* Stile dell'immagine */
+::ng-deep .menu-logo {
+  height: 15vh !important; /* Altezza dell'immagine aumentata a 80px */
 }
-
-
-
-
