--- a/src/app/Fornitore/aggiungi-fornitore/aggiungi-fornitore.component.html
+++ b/src/app/Fornitore/aggiungi-fornitore/aggiungi-fornitore.component.html
@@ -1,10 +1,6 @@
 <div class="container">
   <h2>Aggiungi Fornitore</h2>
 
-  <!-- Inizia la card con il componente p-messages -->
- 
-  <!-- Fine della card -->
-
   <!-- Form per l'aggiunta del fornitore -->
   <form (submit)="aggiungiFornitore()">
     <div class="form-group">
@@ -24,7 +20,11 @@
 
     <div class="form-group">
       <label for="numeroTelefono">Numero di Telefono:</label>
-      <input type="text" id="numeroTelefono" name="numeroTelefono" [(ngModel)]="fornitore.numeroTelefono" required>
+      <input type="text" id="numeroTelefono" name="numeroTelefono" [(ngModel)]="fornitore.numeroTelefono" 
+             required pattern="[0-9]*" minlength="10" maxlength="15">
+      <div *ngIf="telefonoInvalid" class="error-message">
+        Inserisci un numero di telefono valido.
+      </div>
     </div>
 
     <div class="form-group">
@@ -34,7 +34,11 @@
 
     <div class="form-group">
       <label for="partitaIVA">Partita IVA:</label>
-      <input type="text" id="partitaIVA" name="partitaIVA" [(ngModel)]="fornitore.partitaIVA" required>
+      <input type="text" id="partitaIVA" name="partitaIVA" [(ngModel)]="fornitore.partitaIVA" 
+             required pattern="[0-9]*" minlength="11" maxlength="11">
+      <div *ngIf="partitaIVAInvalid" class="error-message">
+        Inserisci una Partita IVA valida di 11 cifre.
+      </div>
     </div>
 
     <button type="submit">Aggiungi Fornitore</button>
