--- a/src/app/OrdineCliente/aggiungi-ordine-cliente/aggiungi-ordine-cliente.component.html
+++ b/src/app/OrdineCliente/aggiungi-ordine-cliente/aggiungi-ordine-cliente.component.html
@@ -1,1 +1,53 @@
-<p>aggiungi-ordine-cliente works!</p>
+<div *ngIf="prodotti.length > 0">
+    <table>
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>Marca</th>
+          <th>Descrizione</th>
+          <th>Prezzo</th>
+          <th>IVA</th>
+          <th>Quantità</th>
+          <th>Sotto Categoria</th>
+          <th>Aggiungi al carrello</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let prodotto of prodotti">
+          <td>{{ prodotto.nome }}</td>
+          <td>{{ prodotto.marca }}</td>
+          <td>{{ prodotto.descrizione }}</td>
+          <td>{{ prodotto.prezzo }}</td>
+          <td>{{ prodotto.iva }}</td>
+          <td>{{ prodotto.quantita }}</td>
+          <td>
+            <ng-container *ngFor="let categoria of prodotto.sottoCategoria; let last = last">
+              {{ categoria }}{{ last ? '' : ', ' }}
+            </ng-container>
+          </td>
+          <td>
+            <button (click)="aggiungiRigaDOrdine(prodotto)">Aggiungi al carrello</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  
+  <!-- Carrello -->
+  <div *ngIf="carrello.length > 0">
+    <h2>Carrello</h2>
+    <ul>
+      <li *ngFor="let prodotto of carrello">
+        {{ prodotto.nome }} - {{ prodotto.prezzo }} - {{ prodotto.marca }}
+      </li>
+    </ul>
+  </div>
+
+  <div *ngIf="carrello.length > 0">
+    <button (click)="confermaOrdine()">Conferma Ordine</button>
+  </div>
+  
+  <div *ngIf="prodotti.length === 0">
+    Nessun prodotto trovato.
+  </div>
+  
