--- a/src/app/Fornitore/fornitori/fornitori-component.component.html
+++ b/src/app/Fornitore/fornitori/fornitori-component.component.html
@@ -3,14 +3,24 @@
   <h2>Elenco Fornitori</h2>
   <ul>
     <li *ngFor="let fornitore of fornitori" class="fornitore-item">
-      <h3>{{ fornitore.nome }}</h3>
-      <p><strong>Sede Legale:</strong> {{ fornitore.sedeLegale }}</p>
-      <p><strong>Nazione Sede:</strong> {{ fornitore.nazioneSede }}</p>
-      <p><strong>Partita IVA:</strong> {{ fornitore.partitaIVA }}</p>
-      <p><strong>Email:</strong> {{ fornitore.email }}</p>
-      <p><strong>Telefono:</strong> {{ fornitore.numeroTelefono }}</p>
-      <!-- Altre informazioni del fornitore -->
-      <hr>
+      <!-- Utilizzo di ngIf per mostrare i dati del fornitore o il modulo di modifica -->
+      <ng-container *ngIf="!fornitoreInModifica || fornitoreInModifica.id !== fornitore.id; else modificaFornitoreRiga">
+        <h3>{{ fornitore.nome }}</h3>
+        <p><strong>Sede Legale:</strong> {{ fornitore.sedeLegale }}</p>
+        <p><strong>Nazione Sede:</strong> {{ fornitore.nazioneSede }}</p>
+        <p><strong>Partita IVA:</strong> {{ fornitore.partitaIVA }}</p>
+        <p><strong>Email:</strong> {{ fornitore.email }}</p>
+        <p><strong>Telefono:</strong> {{ fornitore.numeroTelefono }}</p>
+        <!-- Aggiungi il pulsante Modifica -->
+        <button class="modifica" (click)="avviaModifica(fornitore)">Modifica</button>
+        <button class="elimina" (click)="eliminaFornitore(fornitore)">Elimina</button>
+        <!-- Altre informazioni del fornitore -->
+        <hr>
+      </ng-container>
+      <!-- Modulo di modifica del fornitore -->
+      <ng-template #modificaFornitoreRiga>
+        <app-modifica-fornitore [fornitore]="fornitore" (modificaCompletata)="modificaFornitore(fornitore)"></app-modifica-fornitore>
+      </ng-template>
     </li>
   </ul>
 </div>
