--- a/src/app/home/menu/menu.component.css
+++ b/src/app/home/menu/menu.component.css
@@ -1,21 +1,38 @@
 /* Importa il file di stile di primeicons */
 @import '~primeicons/primeicons.css';
-
-::ng-deep .p-menu-list .p-menuitem {
-  margin: 0 !important;
-  padding: 5px 0 10px 0 !important; /* Padding superiore e inferiore per separare gli elementi */
-  border-bottom: 1px solid #000000 !important; /* Linea divisoria tra gli elementi */
-   /* Dimensione del testo (aumentata a 24px) */
+/* Stile generale del menu */
+::ng-deep .custom-menu {
+  background-color: #007bff; /* Colore di sfondo */
+  color: #0c0c0c; /* Colore del testo */
+  border-bottom: 3px solid #0056b3; /* Linea inferiore */
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); /* Ombra */
 }
 
-/* Stile del menu secondario */
-::ng-deep .p-submenu-list .p-menuitem {
-  margin: 0 !important;
-  padding: 5px 0 !important; /* Padding superiore e inferiore per separare gli elementi */
-    /* Dimensione del testo (aumentata a 22px) */
+/* Stile del logo */
+::ng-deep .menu-logo {
+  height: 60px; /* Altezza dell'immagine */
+  cursor: pointer; /* Cambia il cursore al passaggio del mouse */
 }
 
-/* Stile dell'immagine */
+/* Stile dell'input di ricerca */
+::ng-deep .w-full {
+  padding: 8px 12px; /* Spaziatura interna */
+ 
+  border-radius: 10px; /* Bordi arrotondati */
+  background-color: #ffffff; /* Colore di sfondo */
+  color: #333; /* Colore del testo */
+  transition: background-color 0.3s, box-shadow 0.3s; /* Transizione al passaggio del mouse */
+}
+
+/* Cambia il colore di sfondo dell'input al passaggio del mouse */
+::ng-deep .w-full:hover {
+  background-color: #f0f0f0;
+}
+
+/* Aggiungi un effetto ombra all'input al passaggio del mouse */
+::ng-deep .w-full:focus {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
 ::ng-deep .menu-logo {
   height: 15vh !important; /* Altezza dell'immagine aumentata a 80px */
 }
