modifica ed annulla di fornitore

--- a/src/app/Fornitore/fornitori/fornitori-component.component.html
+++ b/src/app/Fornitore/fornitori/fornitori-component.component.html
@@ -19,10 +19,13 @@
       </ng-container>
       <!-- Modulo di modifica del fornitore -->
       <ng-template #modificaFornitoreRiga>
-        <app-modifica-fornitore [fornitore]="fornitore" (modificaCompletata)="modificaFornitore(fornitore)"></app-modifica-fornitore>
+        <app-modifica-fornitore
+        *ngIf="fornitoreInModifica"
+        [fornitore]="fornitoreInModifica"
+        (modificaCompletata)="gestisciModificaCompletata()">
+        [annullaModifica]="annullaModifica">
+      </app-modifica-fornitore>
       </ng-template>
-
-      
     </li>
   </ul>
 </div>
