modifiche Leo Angular

--- a/src/app/OrdineCliente/ordine-cliente/ordine-cliente.component.html
+++ b/src/app/OrdineCliente/ordine-cliente/ordine-cliente.component.html
@@ -1,1 +1,26 @@
-<p>ordine-cliente works!</p>
+<div>
+  <h1>Ordini Cliente</h1>
+
+  <div *ngIf="ordiniCliente.length > 0">
+    <table>
+      <thead>
+        <tr>
+          <th>Cliente</th>
+          <th>Data Invio Ordine</th>
+          <th>Prezzo Totale</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let ordine of ordiniCliente">
+          <td>{{ ordine.cliente?.nome }} {{ ordine.cliente?.cognome }}</td>
+          <td>{{ ordine.dataInvioOrdine | date:'dd/MM/yyyy HH:mm:ss' }}</td>
+          <td>{{ ordine.prezzoTotale | number:'1.2-2' }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div *ngIf="ordiniCliente.length === 0">
+    <p>Nessun ordine trovato.</p>
+  </div>
+</div>
